less/jquery-sidebar/jquery-sidebar-core.less
//
// Sidebar Core
// --------------------------------------------------

.sidebar {
    border-left-width: 0;
    border-right-width: 0;

    .sidebar-header {
        display: block;
        position: relative;
        padding: 16px;
        height: 151px;
        background: rgb(38, 50, 56);
        color: #ffffff;
        
        .sidebar-header-title {
            display: block;
            position: absolute;
            bottom: 10px;
            left: 0;
            width: 100%;
            padding: 2px 16px;
            text-overflow: ellipsis;
            white-space: nowrap;
            overflow: hidden;
        }
    }

    .sidebar-item {
        font-weight: 500;
    }

    .sidebar-group > span,
    .sidebar-item > a {
        padding: 19px 40px;
    }

    .sidebar-item > a.active {
        border-left-width: 0;
        padding: 19px 40px;
    }

    &.sidebar-default {
        .sidebar-item > a.active {
            border-left-width: 0;
            color: @sidebar-default-link-hover-color;
            background-color: @sidebar-default-link-hover-bg;
        }
    }

    &.sidebar-inverse {
        .sidebar-item > a.active {
            border-left-width: 0;
            color: @sidebar-inverse-link-hover-color;
            background-color: @sidebar-inverse-link-hover-bg;
        }
    }

}

